# wasm_validator

./: .gitignore  Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml
src/: lib.rs
typescript/: index.d.ts  index.js
