[package]
name = "wasm-validator"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly JSON schema validator"

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonschema = {version = "0.30.0", default-features = false}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140"}
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }